syntax="proto3";

package com.shopping.stub.user;

option java_package= "com.shopping.stub.user";

option java_multiple_files=true;

service UserService {

   rpc getUserDetails( UserRequest) returns (UserResponse);
}

message  UserRequest {
    string username=1;
}

message  UserResponse {
 
	 int32 id=1;
	 string username=2;
	 string name=3;
	 int32 age=4;
	 Gender gender=5;
	 int32 num_of_orders=6;
}

 enum Gender{
     MALE=0;
    FEMALE=1; 
    OTHER=2;
}